# ROS2-Arm-4Axis--MoveIt2

./: README.md  ik_probe.py  ik_probe_xy.py
docs/: moveit_gazebo_integration.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/moveit_arm_package/lib/moveit_arm_package/: arm_controller  vision_node
install/moveit_arm_package/share/ament_index/resource_index/package_run_dependencies/: moveit_arm_package
install/moveit_arm_package/share/ament_index/resource_index/parent_prefix_path/: moveit_arm_package
install/moveit_arm_package/share/moveit_arm_package/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/moveit_arm_package/share/moveit_arm_package/cmake/: moveit_arm_packageConfig.cmake
install/moveit_arm_package/share/moveit_arm_package/launch/: display.launch.py  gazebo.launch.py  run_controller.launch.py
install/moveit_arm_package/share/moveit_arm_package/models/aruco_marker/: model.config  model.sdf
install/moveit_arm_package/share/moveit_arm_package/urdf/: arm.urdf.xacro  camera.xacro
install/moveit_arm_package/share/moveit_arm_package/worlds/: blocks.world
install/moveit_config/share/ament_index/resource_index/package_run_dependencies/: moveit_config
install/moveit_config/share/moveit_config/: .setup_assistant  package.sh
install/moveit_config/share/moveit_config/config/: arm_robot.srdf  arm_robot.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
install/moveit_config/share/moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py
log/: latest_build
src/moveit_arm_package/: CMakeLists.txt  package.xml
src/moveit_arm_package/config/: controllers.yaml
src/moveit_arm_package/launch/: bringup.launch.py  display.launch.py  moveit.launch.py
src/moveit_arm_package/models/aruco_marker/materials/scripts/: aruco.material
src/moveit_arm_package/rviz/: arm.rviz
src/moveit_arm_package/src/: ArmController.cpp  VisionNode.cpp
src/moveit_arm_package/urdf/: arm.urdf.xacro  camera.xacro
src/moveit_arm_package/worlds/: blocks.world
src/moveit_config/: .setup_assistant
src/moveit_config/config/: arm_robot.ros2_control.xacro  arm_robot.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml
src/moveit_config/launch/: move_group.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
src/urdf/: arm.urdf
